2011-06-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove references to non-existing files.

2011-06-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: Remove reference to wrapup directory.

2011-06-07	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* configure.ac: Use standard cache BSP options.

2011-05-17	Till Straumann <strauman@slac.stanford.edu>

	PR1797/bsps
	* configure.ac, include/bsp.h: Made
	CONFIGURE_MALLOC_BSP_SUPPORTS_SBRK a bspopts.h setting.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* include/tm27.h:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-06-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Remove AC_CHECK_SIZEOF([void *]).

2010-06-29	Joel Sherrill <Joel.Sherrill@OARcorp.com>

	* configure.ac: Added AC_CHECK_SIZEOF macro.

2009-12-08	Eric Norum <wenorum@lbl.gov>

	* include/bsp.h: Add network configuration preprocessor macros.

2009-10-22	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, preinstall.am: Update for exception support changes.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/mcp750.cfg: Remove RTEMS_BSP_FAMILY.
	* make/custom/mtx603e.cfg: Remove RTEMS_BSP_FAMILY.
	* make/custom/mvme2100.cfg: Remove RTEMS_BSP_FAMILY.
	* make/custom/mvme2307.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/mcp750.cfg: New (relocated from /make/custom).
	* make/custom/mtx603e.cfg: New (relocated from /make/custom).
	* make/custom/mvme2100.cfg: New (relocated from /make/custom).
	* make/custom/mvme2307.cfg: New (relocated from /make/custom).

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.
