@@ -1,0 +1,36 @@
+#
+#  Config file for the PowerPC 604 based mvme2307
+#
+#  $Id$
+#
+
+include $(RTEMS_ROOT)/make/custom/default.cfg
+
+RTEMS_CPU=powerpc
+RTEMS_CPU_MODEL=mpc604
+
+#  This contains the compiler options necessary to select the CPU model
+#  and (hopefully) optimize for it. 
+#
+CPU_CFLAGS = -mcpu=powerpc -mmultiple -mstring -mstrict-align -D__ppc_generic
+
+# optimize flag: typically -O2
+CFLAGS_OPTIMIZE_V = -O2 -g
+
+ifdef PURE_BINARY
+define bsp-post-link
+	$(default-bsp-post-link)
+ 	$(OBJCOPY) -O binary -R .comment -S $(basename $@).exe $(basename $@)$(DOWNEXT)
+endef
+else
+define bsp-post-link
+	$(default-bsp-post-link)
+ 	$(OBJCOPY) -O binary -R .comment -S $(basename $@).exe rtems
+ 	gzip -vf9 rtems
+ 	$(LD) -o $(basename $@)$(DOWNEXT)  $(PROJECT_RELEASE)/lib/bootloader.o \
+	    --just-symbols=$(basename $@).exe \
+ 	    -b binary rtems.gz -T $(PROJECT_RELEASE)/lib/ppcboot.lds \
+ 	    -Map $(basename $@).map && chmod 755 $@
+ 	rm -f rtems.gz
+endef
+endif
